# beagleburner

./: .editorconfig  Config.in  README.md  USAGE.md  external.desc  external.mk
.forgejo/workflows/: buildroot.yml
.github/workflows/: buildroot.yml
board/: beagleburner.its  busybox.config  extlinux.conf  genimage-storage.cfg  genimage.cfg  linux.config  post-build.sh  post-image.sh  uboot.config
board/dtso/ti/omap/: am335x-beagleburner.dtso  am335x-bootargs.dtso
board/rootfs_overlay/etc/init.d/: S60storage  S70gadget  S71burner
board/rootfs_overlay/etc/storage-skel/: README.txt
configs/: beaglebone_debug_defconfig  beaglebone_defconfig
debug/: device_table.txt
debug/rootfs_overlay/etc/: dhcpcd.conf
debug/rootfs_overlay/root/.ssh/: authorized_keys
package/burner/: Config.in  burner.mk
package/burner/src/: .editorconfig  burner-slot-handler  burner.c  common.h  is-any-button-pressed.c  leds.c  leds.h  meson.build
patches/: README.md
